--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -1,5 +1,7 @@
 ---
 import { SITE } from "@config";
+import Socials from "@components/Socials.astro";
+
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
@@ -23,6 +25,8 @@ const { frontmatter } = Astro.props;
       <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
       <slot />
     </section>
+    <Socials centered />
   </main>
+
   <Footer />
 </Layout>
