--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -26,7 +26,7 @@ const {
   tags,
 } = post.data;
 
-const { Content } = await post.render();
+const { Content, remarkPluginFrontmatter } = await post.render();
 
 const ogImageUrl = typeof ogImage === "string" ? ogImage : ogImage?.src;
 const ogUrl = new URL(
@@ -68,6 +68,8 @@ const layoutProps = {
       size="lg"
       className="my-2"
     />
+    <p>⏰ {remarkPluginFrontmatter.minutesRead}</p>
+
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
     </article>
